--- a/package.json
+++ b/package.json
@@ -9,13 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/source-sans-pro": "^0.2.3",
     "expo": "~51.0.9",
+    "expo-font": "^12.0.6",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.2",
+    "punycode": "^2.3.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "^4.10.3",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "eslint": "^9.4.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5"
   },
   "private": true
 }
