--- a/package.json
+++ b/package.json
@@ -6,25 +6,35 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
     "@expo-google-fonts/source-sans-pro": "^0.2.3",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.9",
     "expo-font": "^12.0.6",
+    "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.2",
     "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.10.3",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.3.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
-    "eslint": "^9.4.0",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.0.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5"
   },
